tests/__snapshots__/validation-ts-expect-error-argument-is-missing-stderr.snap.txt
Error: Directive requires an argument.

Add a fragment of the expected error message after the directive.
To ignore the directive, append a '!' character after it.

  1 | // @ts-expect-error
    | ~~~~~~~~~~~~~~~~~~~
  2 | const x: string = 0;
  3 | 

      at ./__typetests__/sample.tst.ts:1:1

